# otus_hw6

./: CMakeLists.txt  README.md
container/: container.hpp
list/: list.hpp
main/: main.cpp  main.hpp
otus_sources/: complex_value.cpp  convertion.cpp  destructors.cpp  explicit.cpp  move.cpp
vector/: vector.hpp
